📦 Update docker and env config

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-MYSQL_PASSWORD=super$ecret
+# This is the password for the database. Once you've set this, it may be
+# tricky to change it without resetting the volume associated with
+# the database Docker container!
+MYSQL_PASSWORD=sUper$ecret!
+
+# This secret is used to generate JWTs for authentication.
+CONLANGDEV_JWT_SECRET=sUuuperDuuper$ecret!!
