💾 Change references to MySQL to MariaDB

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # This is the password for the database. Once you've set this, it may be
 # tricky to change it without resetting the volume associated with
 # the database Docker container!
-MYSQL_PASSWORD=sUper$ecret!
+MARIADB_PASSWORD=sUper$ecret!
 
 # This secret is used to generate JWTs for authentication.
 CONLANGDEV_JWT_SECRET=sUuuperDuuper$ecret!!
